[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.29.0", features = [
    "global-context",
    "rand-std",
    "recovery",
] }
tokio = { version = "1.36.0", features = [
    "net",
    "rt-multi-thread",
    "io-util",
    "macros",
] }
sha2 = "0.10.8"
hex = "0.4.3"
num-bigint = "0.4.4"
sled = "0.34.7"
thiserror = "1.0.59"
bs58 = "0.5.1"
serde = "1.0.198"
serde_derive = "1.0.198"
bincode = "1.3.3"
